# memtrace

./: .flake8  .gitignore  .gitmodules  CMakeLists.txt  Makefile.am  Makefile.ci  auditwheel  build-requirements.txt  ci  ci-docker  ci.py  configure.ac  deploy-wheels  fmt  git-for-each  in-docker  patch-valgrind  python3-asan  requirements.txt  run-in-venv  setup.py  valgrind.patch
.github/workflows/: ci.yml  ci.yml.j2
docker/: Dockerfile.j2  build  config.py  deploy  generate-build-files  images.ini
docker/image/: Dockerfile  user-config.jam
docker/image/crosstool-ng/aarch64/: arch.config
docker/image/crosstool-ng/arm/: arch.config
docker/image/crosstool-ng/common/: common.config
docker/image/crosstool-ng/common/patches/glibc/2.17/: 15036.patch
docker/image/crosstool-ng/i686/: arch.config
docker/image/crosstool-ng/ppc64/: arch.config
docker/image/crosstool-ng/ppc64le/: arch.config
docker/image/crosstool-ng/s390x/: arch.config
docker/image/crosstool-ng/x86_64/: arch.config
docker/image/zlib-ng/common/: hwcap-s390-vx.patch
jupyter/: deploy-image
jupyter/image/: Dockerfile
memtrace/: .gitignore  Makefile.am  __init__.py  analysis.py  ci  cli.py  dump.py  format.py  index.py  interval_tree.py  memtrace.ipynb  mt_main.c  native.py  notebook.py  stats.py  symbolizer.py  taint.py  trace.py  tracer.py  ud.py
memtrace/docker/: Dockerfile  deploy-image  deploy-images
memtrace/docker/image/: CXXABI_LDBL.patch  Dockerfile
memtrace/python/: .gitignore  CMakeLists.txt  MANIFEST.in  ci  requirements.txt  setup.py
memtrace/python/memtrace/: __init__.py  analysis.py  disasm.py  dump.py  format.py  index.py  stats.py  symbolizer.py  taint.py  trace.py  tracer.py  ud.py  ud_dot.j2  ud_html.j2
memtrace/python/memtrace_ext/: disasm.h  endian.h  memtrace_ext.cc  memtrace_ext.cpp  mmvector.h
memtrace/python/test/: cat.c  i386-dump.txt  i386-seek.txt  i386-stats.txt  i386-taint-pc.txt  i386-taint.org  i386-taint.txt  i386-ud.txt  test.py  x86_64-dump.txt  x86_64-seek.txt  x86_64-stats.txt  x86_64-taint.org  x86_64-taint.txt  x86_64-ud.txt  x86_64.S
memtrace/tracer/: Linux-aarch64  Linux-x86_64
memtrace_ext/: align.h  debuginfo.h  disasm.h  endian.h  entries.h  identifier.h  machine.h  memtrace_ext.cc  mmvector.h
test/: cat.c  i386-dump-entries.txt  i386-dump-seq.txt  i386-dump-srcline.txt  i386-dump.txt  i386-ldst.txt  i386-seek.txt  i386-stats.txt  i386-taint.org  i386-ud.txt  i386.S  i386.lds  test.py  x86_64-dump-entries.txt  x86_64-dump-seq.txt  x86_64-dump-srcline.txt  x86_64-dump.txt  x86_64-ldst.txt  x86_64-seek.txt  x86_64-stats.txt  x86_64-taint-pc.txt  x86_64-taint.org  x86_64-ud.txt  x86_64.S  x86_64.lds
valgrind-patches/: 0001-automake-copy.patch  0002-tool-symlink.patch  0003-tool.patch  0004-x86-max-insns.patch  0005-armv6t2.patch  armv6t2.patch  automake-copy.patch  git-am  git-autogen  series  tool-symlink.patch  tool.patch  x86-max-insns.patch
valgrind-tracer/: .clang-format  .gitignore  Makefile.in  generate-regs  mt_main.c  mt_regs.h
